# ovis

./: 0_OGC_NOTE.rst  JOB.rst  configure.ac
ldms/: configure.ac  rules.mk
ldms/man/: ldmsd-peer-daemon-advertisement.rst  ldmsd.man  ldmsd_controller.rst  ldmsd_multi_tenant.rst  ldmsd_sampler_discovery.man  ldmsd_sampler_plugin_developer_document.rst  ldmsd_yaml_parser.rst
ldms/python/: ldms.pxd  ldms.pyx
ldms/python/ldmsd/: Makefile.am  ldmsd_communicator.py  ldmsd_controller  ldmsd_msg.py  ldmsd_probe.py  parser_util.py
ldms/python/test/ldms_ls2test_sampler/: ldms_ls.out  ldms_ls_to_test_sampler.py
ldms/src/: Makefile.am
ldms/src/core/: Makefile.am  ldms.c  ldms.h  ldms_core.h  ldms_private.h  ldms_rail.c  ldms_rail.h  ldms_stream.c  ldms_xprt.c  ldms_xprt.h
ldms/src/decomp/as_is/: decomp_as_is.c
ldms/src/decomp/flex/: decomp_flex.c
ldms/src/decomp/static/: decomp_static.c
ldms/src/jobmgr/: Makefile.am  ldms-jobmgr.rst
ldms/src/jobmgr/flux/: Makefile.am  flux_jobtap_ldms_notifier.c  flux_ldms_notifier.c  flux_ldms_notifier.h  flux_shell_ldms_notifier.c  jobmgr_flux.c  jobmgr_flux.h  ldms-flux_shell_ldms_notifier.rst  ldms-jobmgr_flux.rst
ldms/src/jobmgr/slurm/: Makefile.am  jobmgr_slurm.c  jobmgr_slurm.h  ldms-jobmgr_slurm.rst
ldms/src/ldmsd/: Makefile.am  ldms-jobmgr_plugin.rst  ldms-jobmgr_query.rst  ldms_ls.c  ldmsctl.c  ldmsd.c  ldmsd.h  ldmsd.rst  ldmsd_auth.c  ldmsd_cfgobj.c  ldmsd_config.c  ldmsd_daemon.c  ldmsd_decomp.c  ldmsd_env.c  ldmsd_event.c  ldmsd_event.h  ldmsd_event_strg.c  ldmsd_failover.c  ldmsd_failover.rst  ldmsd_group.c  ldmsd_jobmgr.c  ldmsd_jobmgr.h  ldmsd_jobmgr_query.c  ldmsd_jobmgr_query.h  ldmsd_listen.c  ldmsd_plug_api.c  ldmsd_plugin.c  ldmsd_prdcr.c  ldmsd_request.c  ldmsd_request.h  ldmsd_request_1.c  ldmsd_request_new.c  ldmsd_request_util.c  ldmsd_smplr.c  ldmsd_store.c  ldmsd_stream.c  ldmsd_strgp.c  ldmsd_tenant.c  ldmsd_tenant.h  ldmsd_tenant_job_scheduler.c  (+3 more)
ldms/src/ldmsd/test/: Makefile.am
ldms/src/per_job/: Makefile.am  cgroup_sampler.c  cgroup_smplrp.c  cgroup_util.c  cgroup_util.h
ldms/src/sampler/: Makefile.am  appinfo.c  clock.c  cray_power_sampler.c  fptrans.c  generic_sampler.c  grptest.c  hfclock.c  hweventpapi.c  ldms_jobid.c  lnet_stats.c  msr_interlagos.c  opa2.c  per_job_sampler_base.c  per_job_sampler_base.h  perfevent.c  procdiskstats.c  procnetdev.c  procnfs.c  rapl.c  sampler_atasmart.c  sampler_base.c  sampler_base.h  switchx.c  switchx_eth.c  sysclassib.c  timer_base.c
ldms/src/sampler/app_sampler/: app_sampler.c  linux_proc_sampler.c
ldms/src/sampler/aries_mmr/: aries_linkstatus.c  aries_mmr.c  aries_mmr_configurable.c  aries_nic_mmr.c  aries_rtr_mmr.c
ldms/src/sampler/blob_stream/: blob_stream_writer.c
ldms/src/sampler/coretemp/: coretemp.c
ldms/src/sampler/cray_system_sampler/: aries_metrics_gpcdr.c  cray_aries_r_sampler.c  cray_gemini_r_sampler.c  cray_sampler_base.c  dvs_sampler.c  gemini_metrics_gpcdr.c  general_metrics.c  lustre_metrics.c  nvidia_metrics.c  rca_metrics.c
ldms/src/sampler/dcgm_sampler/: dcgm_sampler.c
ldms/src/sampler/dstat/: dstat.c
ldms/src/sampler/examples/: Makefile.am
ldms/src/sampler/examples/per_job/: Makefile.am  test_per_job_sampler.c
ldms/src/sampler/filesingle/: filesingle.c
ldms/src/sampler/hello_stream/: hello_sampler.c
ldms/src/sampler/ibm_occ/: ibm_occ.c
ldms/src/sampler/ibmad_sampler/: ibmad_sampler.c
ldms/src/sampler/ibnet/: ibnet_data.c  ibnet_plugin.c
ldms/src/sampler/job_info/: jobinfo.c
ldms/src/sampler/json/: json_stream_sampler.c
ldms/src/sampler/kgnilnd/: kgnilnd.c
ldms/src/sampler/llnl/: edac.c
ldms/src/sampler/loadavg/: loadavg.c
ldms/src/sampler/lustre/: lustre2_client.c  lustre2_mds.c  lustre2_oss.c  lustre_sampler.c  lustre_sampler.h
ldms/src/sampler/lustre_client/: lustre_client.c  lustre_client_general.c
ldms/src/sampler/lustre_mdc/: lustre_mdc.c  lustre_mdc_general.c
ldms/src/sampler/lustre_mdt/: lustre_mdt.c  lustre_mdt_general.c  lustre_mdt_job_stats.c
ldms/src/sampler/per_job/: Makefile.am  per_job_netdev.c  per_job_stat.c
ldms/src/store/: Makefile.am  consumer_me.c  rabbit_utils.c  store_amqp.c  store_amqp_new.c  store_csv.c  store_csv_common.h  store_function_csv.c  store_rabbitkw.c  store_rabbitv3.c  store_sos.c
ldms/src/store/store_otel/: Makefile.am  store_otel.c
ldms/src/test/: test_ldms.c  test_ldms_notify.c  test_ldms_push.c  test_ldms_set_info.c
lib/: configure.ac
lib/src/: Makefile.am
lib/src/json/: json_apis_test.c  json_util.c  json_util.h
lib/src/ovis_ev/: ev.c  ev.h  ev_priv.h  evw.c
lib/src/ovis_event/: ovis_event_priv.h
lib/src/ovis_histogram/: Makefile.am  ovis_histogram.c  ovis_histogram.h
lib/src/ovis_log/: ovis_log.c  ovis_log.h
lib/src/ovis_ref/: ref.h
lib/src/ovis_util/: Makefile.am
lib/src/zap/: zap.c  zap.h  zap_priv.h
(+66 files in other folders)
